feat: implement confirmation dialog for unsaved changes and deletion in book modal

--- a/frontend/src/app/features/book-tracker/book-tracker.component.html
+++ b/frontend/src/app/features/book-tracker/book-tracker.component.html
@@ -376,7 +376,7 @@
   [mode]="modalMode"
   [allGenres]="allGenres"
   (save)="onModalSave($event)"
-  (cancel)="showModal = false"
+  (cancel)="onModalCancel()"
   (delete)="onModalDelete(editingBook)"
 ></app-book-modal>
 
